fixed heart on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -530,7 +530,7 @@
 	}
 
 	.made {
-		margin-right: 25px;
+		margin-right: 20px;
 	}
 
 	.heart {
